examples/test/testpolicy7253.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7253
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key20: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value31
          key24: value37
          key32: value10
      podSelector:
        matchLabels:
          key8: value37
          key12: value2
